name:                HM
version:             0.1.0.0
-- synopsis:
-- description:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           Iavor Diatchk 2018
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     AST,
                       SynCat,
                       HMPanic,
                       Parser
                       Parser.Lexer,
                       Parser.Monad,
                       Parser.AST

  build-depends:       base,
                       text,
                       containers,
                       array,
                       alex-tools,
                       panic
  hs-source-dirs:      src
  build-tools:         alex, happy
  ghc-options:         -Wall
  default-language:    Haskell2010
